      (turned off by default), which speed up things further; e.g., for showing
      500 messages (debug build), we went from 642ms to 247ms, given an
      in-memory temp file.

      If and how much this helps, depends on your setup, see the
      =mu4e-mu-allow-temp-file= docstring for details on how to determine this.

    - Jumping to the 'jo' /other/ Maildirs used to quite slow the first time, but
      this now done on the server side, making it much faster.

    - after retrieving mail (~mu4e-update-mail-and-index~), save the output of the
      retrieval command in a buffer =*mu4e-last-update*=, = which can be useful
      for diagnosis.

* 1.10 (released on March 26, 2023)

*** mu

   - a new command-line parser, which allows (hopefully!) for a better user
     interaction; better error checking and more

   - Invalid e-mail addresses are no longer added to the contacts-cache.

   - The ~cfind~ command gained ~--format=json~, which makes it easy to further
     process contact information, e.g. using ~jq~. See the manpage for more
     details.

   - The ~init~ command learned ~--reinit~ to reinitialize the database with the
     settings of an existing one

   - The ~script~ command is gone, and integrated with ~mu~ directly, i.e. the
     scripts (when enabled) are directly visible in the ~mu~ output. Also see the
     Guile section.

   - The ~extract~ command gained the ~--uncooked~ option to tell it to _not_ replace
     spaces with dashes in extracted filenames (and a few other things).

   - Revamped manpages which are now generated from ~org~ descriptions

   - Standardize on PCRE-flavored regular expressions throughout *mu*.

   - ~mu~ no longer attempts to 'expand' the =~= (and some other characters) in
     command line options that take filenames, since it was a bit unpredictable.
     So write e.g. ~--option=/home/user/hello~ instead of ~--option=~/hello~

   - Experimental: as bit of a hack, html message bodies are processed as if