@@ -81,8 +81,10 @@
       If and how much this helps, depends on your setup, see the
       =mu4e-mu-allow-temp-file= docstring for details on how to determine this.
 
-    - Jumping to the 'jo' /other/ Maildirs used to quite slow the first time, but
-      this now done on the server side, making it much faster.
+    - Maildir lists are now generated server-side; so e.g. jumping to the 'jo'
+      /other/ Maildirs used to be quite slow the first time.
+
+      ~mu4e-cache-maildir-list~ is obsolete / non-functional now.
 
     - after retrieving mail (~mu4e-update-mail-and-index~), save the output of the
       retrieval command in a buffer =*mu4e-last-update*=, = which can be useful
